attempt at fixing strange z-index bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 20;
 }
 .hero h1 {
   font-family: LemonMilkLight;
