--- a/scss/home.scss
+++ b/scss/home.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 20;
 
     h1 {
         font-family: LemonMilkLight;
